# ym-client

./: .gitignore  client.py  pyproject.toml  pytest.ini  readme.md  requirements-test.txt  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-artifacts.yml  test.yml
models/: __init__.py  calculate_tariffs.py  get_order.py
tests/: conftest.py  test_client.py  test_import.py  test_models.py
tests/fixtures/: README.md
tests/fixtures/errors/: error_response.json
tests/fixtures/orders/: order_created.json  order_status_updated.json
tests/fixtures/tariffs/: calculate_error.json  calculate_success.json
ym_client/: client.py
ym_client/models/: generic.py  get_order.py
